step description scrollbar fixed (?)

--- a/styles/Solution.module.css
+++ b/styles/Solution.module.css
@@ -23,7 +23,7 @@
     padding:10px 10px;
     cursor:pointer;
     transition:0.1s;
-    margin-top:50px;
+    margin: 50px 0;
     font-size:1rem;
 }
 
